firmware/lib/control-table/tests/ui/flat_padding_violation.rs
use control_table::FlatBlock;

#[repr(C)]
#[derive(FlatBlock)]
struct Padded {
    a: u8,
    b: u16,
}

fn main() {}
